<resources>
    <string name="app_name">Taskwarrior</string>
    <string name="app_account_type">kvj.task.account</string>
    <string name="pref_account_name">pref_account_name</string>
    <string name="pref_account_id">pref_account_id</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_content">Taskwarrior Widget</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="editTaskrc">editTaskrc</string>
    <string name="editTaskrcTitle">Edit .taskrc</string>
</resources>
