<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Appearance">
        <SwitchPreferenceCompat
            android:summary="Use a simpler display of datetime (e.g. 'in 2 days', '17 Jun') instead
of full datetime (e.g. 2019-06-17T13:08)"
            app:key="useSimpleDatetime"
            app:title="Use simple datetime" />
        <EditTextPreference
            app:dependency="useSimpleDatetime"
            android:defaultValue="7"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:maxLength="2"
            android:key="dateCountDownThreshold"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Date threshold to use countdown"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <Preference
        android:key="@string/editTaskrc"
        android:summary="Edit the internal .taskrc source file"
        android:title="@string/editTaskrcTitle" />

</PreferenceScreen>
